// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload List handle error 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-error"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <span
            class="ant-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <div
        class="ant-upload-list-item-progress fade-leave"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
        >
          <div>
            <div
              class="ant-progress-outer"
            >
              <div
                class="ant-progress-inner"
              >
                <div
                  class="ant-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should be uploading when upload a file 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-uploading ant-upload-animate-enter"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <span
            class="ant-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <div
        class="ant-upload-list-item-progress"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
        >
          <div>
            <div
              class="ant-progress-outer"
            >
              <div
                class="ant-progress-inner"
              >
                <div
                  class="ant-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should be uploading when upload a file 2`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <span
            class="ant-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <div
        class="ant-upload-list-item-progress fade-leave"
      >
        <div
          class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
        >
          <div>
            <div
              class="ant-progress-outer"
            >
              <div
                class="ant-progress-inner"
              >
                <div
                  class="ant-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should non-image format file preview 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-picture"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        type="button"
      >
        upload
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-picture"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa.zip"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="anticon ant-upload-list-item-icon"
              data-icon="file"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                class="st0"
                d="M534 352V136H232v752h560V394H576c-23.2 0-42-18.8-42-42z"
              />
              <path
                class="st0"
                d="M602 326h188.2L602 137.8z"
              />
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216c0 23.2 18.8 42 42 42h216v494z"
              />
            </svg>
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/aaa.zip"
            rel="noopener noreferrer"
            target="_blank"
            title="not-image"
          >
            not-image
          </a>
        </span>
      </div>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/aaa"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/aaa"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa.xx"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="anticon ant-upload-list-item-icon"
              data-icon="file"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                class="st0"
                d="M534 352V136H232v752h560V394H576c-23.2 0-42-18.8-42-42z"
              />
              <path
                class="st0"
                d="M602 326h188.2L602 137.8z"
              />
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216c0 23.2 18.8 42 42 42h216v494z"
              />
            </svg>
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/aaa.xx"
            rel="noopener noreferrer"
            target="_blank"
            title="not-image"
          >
            not-image
          </a>
        </span>
      </div>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/aaa.png/xx.xx"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="anticon ant-upload-list-item-icon"
              data-icon="file"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                class="st0"
                d="M534 352V136H232v752h560V394H576c-23.2 0-42-18.8-42-42z"
              />
              <path
                class="st0"
                d="M602 326h188.2L602 137.8z"
              />
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216c0 23.2 18.8 42 42 42h216v494z"
              />
            </svg>
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/aaa.png/xx.xx"
            rel="noopener noreferrer"
            target="_blank"
            title="not-image"
          >
            not-image
          </a>
        </span>
      </div>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="data:image/png;base64,UEsDBAoAAAAAADYZYkwAAAAAAAAAAAAAAAAdAAk"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=123"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png?query=123"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=123"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png#anchor"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png#anchor"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png#anchor"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <a
            class="ant-upload-list-item-thumbnail"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=some.query.with.dot"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="image"
              src="https://cdn.xxx.com/xx.xx/aaa.png?query=some.query.with.dot"
            />
          </a>
          <a
            class="ant-upload-list-item-name"
            href="https://cdn.xxx.com/xx.xx/aaa.png?query=some.query.with.dot"
            rel="noopener noreferrer"
            target="_blank"
            title="image"
          >
            image
          </a>
        </span>
      </div>
    </div>
  </div>
</span>
`;
